Updated Readme.html and added GPL license.

--- a/Readme.html
+++ b/Readme.html
@@ -92,6 +92,12 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 	
 <h2 class="center">Change Log</h2>
 
+<h3>0.8 Beta 2</h3>
+(Released ??, 2013)<br><br>
+<li>Added path from <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt</a> on Sourceforge to enable script on Linux, make LDrawDir case-insensitive, and minor change to LDraw folder path.<br>However, script no longer works on Windows. -le717</li>
+<li>Uploaded source code to <a href="https://github.com/le717/Blender-2.6-LDraw-Importer" target="_blank">GitHub</a>. -le717</li>
+<li>Switched to plain text version of GPL V2. -le717</li>
+
 <h3>0.8 Beta 1</h3>
 
 (Released January 3, 2012)<br><br>
@@ -187,6 +193,8 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 
 <h2 class="center">Planned Features</h2><br> 
 <ol>
+<li>Write Linux installation instructions. (V0.8 Beta 2)</li>
+<li>Convert all whitespace tabs to Python-standard 4 spaces whitespace See this <a href="http://www.blender.org/documentation/blender_python_api_2_65_release/info_best_practice.html" target="_blank">page</a> for more. (V0.8 Beta 2)</li>
 <li>Do not stop entire import process if brick cannot be found, rather skip the brick and continue with import (V0.8 Beta 2)</li>
 <li>Adapt the ability to set LDraw System of Tools path from <a href="https://github.com/impiaaa/blender-ldraw" target="_blank">Spencer Alves's Blender 2.6 LDraw Importer on GitHub</a> (V0.8 Beta 2)</li>
 <li>Add the ability to properly import Bricksmith LDR models (V0.8 Beta Final)</li>
