--- a/Readme.html
+++ b/Readme.html
@@ -7,6 +7,8 @@
 .italic { font-style: italic; }
 td { text-align: center; }
 .center { text-align: center; }
+ a { text-decoration: none; }
+a:hover { text-decoration: underline; }
 </style>
 	<title>Blender 2.6 LDraw Importer Readme</title>
 </head>
@@ -46,14 +48,14 @@ td { text-align: center; }
 </td>
 </tr>
 <tr>
-<td><a href="#Updates">Updates</a>
+<td><a href="#Support">Support</a>
 </td>
 </tr>
 </tbody>
 </table>
 <br>
 <p class="center">
-This is the readme for the <span class="bold">Blender 2.6 LDraw</span> Importer script by <a href="http://wiki.blender.org/index.php/Extensions:2.6/Py/Scripts/Import-Export/LDRAW_Importer" title="Blender Wiki" target="_blank">David Pluntze</a> and improved by <a href="http://jrmastermodelbuilder.netai.net/"  title="JrMasterModelBuilder" target="_blank">JrMasterModelBuilder</a> and <a href=" http://triangle717.wordpress.com" title="Triangle717" target="_blank">le717</a>, and released under the <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" title ="GNU General Public License, version 2">GNU General Public License Version 2.</p><a name="WhatsNeeded"></a>
+This is the readme for the <span class="bold">Blender 2.6 LDraw</span> Importer script by <a href="http://wiki.blender.org/index.php/Extensions:2.6/Py/Scripts/Import-Export/LDRAW_Importer" title="Blender Wiki" target="_blank">David Pluntze</a>, maintained by <a href="http://jrmastermodelbuilder.netai.net/"  title="JrMasterModelBuilder" target="_blank">JrMasterModelBuilder</a> and <a href=" http://triangle717.wordpress.com" title="Triangle717" target="_blank">le717</a>, from October 2012 - January 2013,<br> and released to the public under the <a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" title ="GNU General Public License, version 2">GNU General Public License Version 2.</p><a name="WhatsNeeded"></a>
 <br>
 <h3 class="center">System Requirements</h3>
 <ul>
@@ -67,8 +69,8 @@ This is the readme for the <span class="bold">Blender 2.6 LDraw</span> Importer 
 <ul>
 	<li>On Windows, open <span class="bold">ldraw_import.py</span> in Notepad or <a href="http://notepad-plus-plus.org/" target="_blank" title="Notepad++">Notepad++</a>.
 On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a href="http://www.barebones.com/products/textwrangler/" target="_blank" title="TextWrangler">TextWrangler</a>.</li><br>
-<li>Look for line 28, which will say<pre>ldraw_base = "C:\LDraw"</pre> Replace the text with the path to your LDraw System of Tools.</li>
- <li>Browse to the Blender 2.6 Python addons folder.</li><a name="WinInstall"></a>
+<li>Look for line 46, which will say<pre>LDrawDir = "C:\LDraw"</pre> Replace the text with the path to your LDraw System of Tools.</li>
+ <li>Browse to the Blender 2.6 Python startup folder.</li><a name="WinInstall"></a>
 
 <h4 class="center">Windows</h4>
 	
@@ -94,10 +96,10 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 
 <h3>0.8 Beta 2</h3>
 (Released ??, 2013)<br><br>
-<li>Added path from <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt</a> on Sourceforge to enable script on Linux, make LDrawDir case-insensitive, and minor change to LDraw folder path.<br>However, script no longer works on Windows. -le717</li>
 <li>Uploaded source code to <a href="https://github.com/le717/Blender-2.6-LDraw-Importer" target="_blank">GitHub</a>. -le717</li>
-<li>Switched to plain text version of GPL V2. -le717</li>
-<li>Converted all whitespace to 4 spaces whitespace to conform to Python standards using Blender scripting scene. -le717</li>
+<li>Added path from <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt</a> on Sourceforge to enable script on Linux, make LDrawDir case-insensitive, and minor change to LDraw folder path.</li>
+<li>Switched to plain text version of GPL V2.</li>
+<li>Converted all whitespace to 4 spaces whitespace to conform to Python standards using Blender scripting scene.</li>
 
 <h3>0.8 Beta 1</h3>
 
@@ -109,7 +111,7 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 <li>Updated import completion and error messages. -le717</li>
 <li>Corrected <span class="italic">LDrawDir = " "</span> line to allow use of "\" instead of having to convert them to "/". -le717</li>
 <li>Reformatted Readme CSS from paragraphed blocks to one line code. -le717</li>
-<li>Identified and completely removed <span class="italic">add_utils.py</span> code and functions from script (it did not seem to be doing anything). -le717</li>
+<li>Identified and completely removed <span class="bold">add_utils.py</span> code and functions from script (it did not seem to be doing anything). -le717</li>
 <li>Placed script under the GNU General Public License Version 2, and updated script to add GPL V2 block. -le717</li>
 <li>Updated Installation Instructions -le717</li>
 <li>Minor Readme updates -le717</li>
@@ -117,7 +119,7 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 <h3>0.7.2</h3>
 
 (Released December 13, 2012)<br><br>
-<li><span class="italic">ldraw_import.py</span> can be installed to the <span class="italic">scripts/startup</span> folder, eliminating a few installation steps. -le717
+<li><span class="bold">ldraw_import.py</span> can be installed to the <span class="italic">scripts/startup</span> folder, eliminating a few installation steps. -le717
 </li>
 <li>Added GPL Licence Block to <span class="bold">add_utils.py</span> (forgot to add it the first time). -le717</li>
 <li>Reverted back to <span class="italic">LDConfig.ldr</span> due to problems with script being unable to find <span class="italic">LDCfgalt.ldr</span>. -le717</li>
@@ -135,7 +137,7 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 <li>Enabled the use of <a href="http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.63/BMesh" target="_blank" title="BMesh on Blender Wiki">BMesh</a> for importing (up to 150-gon) -le717</li>
 <li>Modified Readme to mention special notes about release -le717</li>
 <li>Renamed script to denote differences between it and the normal, non-BMesh version. -le717</li>
-<li>Added GPL block from <span class="italic">add_utils.py</span> code, and removed duplicate import functions in <span>add_utils</span>. -le717</li>
+<li>Added GPL block from <span class="bold">add_utils.py</span> code, and removed duplicate import functions in <span>add_utils</span>. -le717</li>
 <li>Changed text from <span class="italic">LDraw Brick Library</span> to <span class="italic">LDraw System of Tools</span> to comply with LDraw bylaws. -le717</li>
 
 <h3>0.7.1</h3>
@@ -144,7 +146,7 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 
 <li>Renamed script to <span class="bold">ldraw_import.py</span> -le717</li>
 <li>Corrected bl_info in ldraw_import.py to enable activation in Blender 2.64 -le717</li>
-<li>Embedded entire <span class="italic"><a href="http://www.tud.ttu.ee/material/Arvutigraafika/Tracking/b261/2.60/scripts/addons/modules/add_utils.py" target="_blank" title="add_utils.py">add_utils.py</a></span> file into ldraw_import.py to enable activation in Blender 2.64 -le717</li>
+<li>Embedded entire <span class="bold"><a href="http://www.tud.ttu.ee/material/Arvutigraafika/Tracking/b261/2.60/scripts/addons/modules/add_utils.py" target="_blank" title="add_utils.py">add_utils.py</a></span> file into ldraw_import.py to enable activation in Blender 2.64 -le717</li>
 <li>Changed minimum Blender version requirement to 2.63 -le717</li>
 <li>Added Bricksmith to optional system requirements -le717</li>
 <li>Updated bl_info just a little bit -le717</li>
@@ -163,7 +165,6 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 <li>Changed Import Menu text -le717</li>
 <li>OS X Script Installation Instructions -JrMasterModelBuilder & <a href="http://www.youtube.com/user/BrickkeepersLab" target="_blank">ProfessorBrickkeeper</a></li>
 <li>Marked some comments with David Pluntze's name because they were his comments -le717</li>
-<a name="Bugs"></a>
 
 <h3>0.6</h3>
 
@@ -178,35 +179,35 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 <h3>0.5</h3>
 
 (Released February 23, 2012)<br><br>
-
+<a name="Bugs"></a>
 <li>Original version by David Pluntze</li><a name="Bugs"></a>
 
 <h2 class="center">Known Bugs</h2><br> 
 <ol>
-<li>If a brick cannot be found, entire import stops. (Identified by le717)</li> 
-<li>Bricksmith LDR files do not properly import, due to different layout than normal LDR files (Identified by ProfessorBrickkeeper)</li>
-<li>Blender 2.65 crashes if user imports multiple models and available RAM is too low to continue (Identified by le717)</li> 
-<li>Alpha colors are not supported (bug from original script)</li>
-<li>Find a way to set the LDraw Brick Library path in Blender itself (bug from original script)</li>
-<li>Rare bug where Blender 2.63 will not import any brick colors after already importing a model; may have already been fixed (Identified by le717)</li>
-<li>Rare bug where Blender 2.63 will crash upon importing a model; may have already been fixed (Identified by le717)</li>
+<li>If a brick cannot be found, entire import stops.</li> 
+<li>Bricksmith LDR files do not properly import, due to different layout than normal LDR files.</li>
+<li>Blender 2.65 crashes if user imports multiple models and available RAM is too low to continue. Can never be fixed, due to various computers with different amounds of RAM.</li> 
+<li>Alpha colors are not supported.</li>
+<li>Find a way to set the LDraw Brick Library path in Blender itself.</li>
+<li>Rare bug where Blender 2.63 will not import any brick colors after already importing a model; may have already been fixed.</li>
+<li>Rare bug where Blender 2.63 will crash upon importing a model; may have already been fixed.</li>
 </ol><a name="ThePlan"></a>
 
 <h2 class="center">Planned Features</h2><br> 
 <ol>
 <li>Write Linux installation instructions. (V0.8 Beta 2)</li>
-<li>Conform to standard Blender script API to be considered for official Blender adoption. See this <a href="http://www.blender.org/documentation/blender_python_api_2_65_release/info_best_practice.html" target="_blank">page</a> for more. (V0.8 Beta 2)</li>
+<li>Conform to standard Blender script API to be considered for official Blender adoption. See this <a href="http://www.blender.org/documentation/blender_python_api_2_65_release/info_best_practice.html" target="_blank">page</a> for more. (V0.8 All versions)</li>
 <li>Do not stop entire import process if brick cannot be found, rather skip the brick and continue with import (V0.8 Beta 2)</li>
 <li>Adapt the ability to set LDraw System of Tools path from <a href="https://github.com/impiaaa/blender-ldraw" target="_blank">Spencer Alves's Blender 2.6 LDraw Importer on GitHub</a> (V0.8 Beta 2)</li>
-<li>Add the ability to properly import Bricksmith LDR models (V0.8 Beta Final)</li>
+<li>Add the ability to properly import Bricksmith LDR models (V0.8 Final)</li>
 <li>Adapt the ability to import transparent and metallic colors from Spencer Alves's Blender 2.6 LDraw Importer on GitHub (V0.9)</li>
 <li>Perhaps create an EXE installer for Windows that would automatically install the script (V1.0+)</li>
 </ol>
-<a name="Updates"></a>
+<a name="Support"></a>
 
-<h2 class="center">Updates</h2>
+<h2 class="center">Support</h2>
 <br>
-To submit bug reports, or to get updates to the script, please go to <a href="http://sourceforge.net/projects/le717.u/files/Blender/Blender%202.6%20LDraw%20Importer/" title="http://sourceforge.net/projects/le717.u/files/Blender/Blender 2.6 LDraw Importer/"  target="_blank">http://sourceforge.net/projects/le717.u/files/Blender/Blender 2.6 LDraw Importer/</a><br><br>
+To submit bug reports or get the newest, bleeding-edge script, please go to <a href="https://github.com/le717/Blender-2.6-LDraw-Importer" title="https://github.com/le717/Blender-2.6-LDraw-Importer"  target="_blank">https://github.com/le717/Blender-2.6-LDraw-Importer</a>. To download the latest official releases, please visit <a href="http://sourceforge.net/projects/le717.u/files/Blender/Blender%202.6%20LDraw%20Importer/" title="http://sourceforge.net/projects/le717.u/files/Blender/Blender 2.6 LDraw Importer"  target="_blank">http://sourceforge.net/projects/le717.u/files/Blender/Blender 2.6 LDraw Importer</a><br><br>
 
 <a class="ToC" href="#ToC">Back to the top</a>
 </body>
