Updated change log, changed all tabs to spaces
using Blender's Scripting scene.

--- a/Read Me First.html
+++ b/Read Me First.html
@@ -97,7 +97,7 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 <h3>0.8 Beta 2</h3>
 (Released ??, 2013)<br><br>
 <li>Uploaded source code to <a href="https://github.com/le717/Blender-2.6-LDraw-Importer" target="_blank">GitHub</a>. -le717</li>
-<li>Added path from <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt</a> on Sourceforge to enable script on Linux, make LDrawDir case-insensitive, and minor change to LDraw folder path.</li>
+<li>Added partial patch from <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt</a> on Sourceforge to allow the LDraw Folder path to be set from within Blender.</li>
 <li>Switched to plain text version of GPL V2.</li>
 <li>Converted all whitespace to 4 spaces whitespace to conform to Python standards using Blender scripting scene.</li>
 
@@ -198,7 +198,7 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 <li>Write Linux installation instructions. (V0.8 Beta 2)</li>
 <li>Conform to standard Blender script API to be considered for official Blender adoption. See this <a href="http://www.blender.org/documentation/blender_python_api_2_65_release/info_best_practice.html" target="_blank">page</a> for more. (V0.8 All versions)</li>
 <li>Do not stop entire import process if brick cannot be found, rather skip the brick and continue with import (V0.8 Beta 2)</li>
-<li>Adapt the ability to set LDraw System of Tools path from <a href="https://github.com/impiaaa/blender-ldraw" target="_blank">Spencer Alves's Blender 2.6 LDraw Importer on GitHub</a> (V0.8 Beta 2)</li>
+<li>Create presets for LDraw Brick library path using  <a href="https://github.com/impiaaa/blender-ldraw" target="_blank">Spencer Alves's Blender 2.6 LDraw Importer</a> as a guide. (V0.8 Beta 2)</li>
 <li>Add the ability to properly import Bricksmith LDR models (V0.8 Final)</li>
 <li>Adapt the ability to import transparent and metallic colors from Spencer Alves's Blender 2.6 LDraw Importer on GitHub (V0.9)</li>
 <li>Perhaps create an EXE installer for Windows that would automatically install the script (V1.0+)</li>
