--- a/Read Me First.htm
+++ b/Read Me First.htm
@@ -97,9 +97,10 @@ On OS X, open the script in TextEdit (be sure to use plain text mode!), or <a hr
 <h3>0.8 Beta 2</h3>
 (Released ??, 2013)<br><br>
 <li>Uploaded source code to <a href="https://github.com/le717/Blender-2.6-LDraw-Importer" target="_blank">GitHub</a>. -le717</li>
-<li>Added partial patch from <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt</a> on Sourceforge to allow the LDraw Folder path to be set from within Blender.</li>
+<li>Added partial patch from <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt</a> on Sourceforge to somewhat allow the LDraw Folder path to be set from within Blender.</li>
 <li>Switched to plain text version of GPL V2.</li>
 <li>Converted all whitespace to 4 spaces whitespace to conform to Python standards using Blender scripting scene.</li>
+<li>Added more of Marc's Linux patch, with minor changes.</li>
 
 <h3>0.8 Beta 1</h3>
 
