Swapped model cleanup switch from "Disable Cleanup" to "Enable Cleanup"
Removed maxpathlimit in folder path to LDraw System of Tools field
3D cursor is always reset to <0,0,0> before importing

--- a/Read Me First.html
+++ b/Read Me First.html
@@ -130,6 +130,9 @@ http://triangTriangle717.wordpress.com" title="TriangTriangle717" target="_blank
 <li>Updated class name to follow convention</li>
 <li>Disable Blender tracker URL button in GUI</li>
 <li>Gracefully stop import if <code>LDrawDir</code> does not exist</li>
+<li>Swapped model cleanup switch from "Disable Cleanup" to "Enable Cleanup"</li>
+<li>Removed <code>maxpath</code>limit in folder path to LDraw System of Tools field</li>  
+<li>3D cursor is always reset to &lt;0,0,0&gt; before importing</li> 
 </ul>
 
 <h3>0.8 Beta 1</h3>
