--- a/Read Me First.html
+++ b/Read Me First.html
@@ -81,6 +81,7 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
 	<li>In the bottom left corner of your screen, under the <span class="bold">Import LDraw Model</span> header, there is a small field with the title <span 
 	class="bold">LDraw Path</span>. Modify the field with the proper folder path to your <span class="italic">LDraw System of Tools</span> installation path.
 	</li>
+    <li>Click the <code>+</code> about the path and name the preset to save your installation path. You will select the present each time you open Blender to set your installation path to the LDraw System of Tools.</li>
 </ul>
 <p class="center">That's it! You have successfully installed the <span class="bold">Blender 2.6 LDraw Importer</span> script.</p>
 <a name="Changes"></a>
