Fixed minimum Blender version

--- a/Read Me First.html
+++ b/Read Me First.html
@@ -67,7 +67,7 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
 
 <h3 class="center">Installation</h3>
 
-<h4 class="center">Windows, OS X, Linux</h4>
+<h4 class="center">Windows, Mac OS X, Linux</h4>
 <ul>
 	<li>Open Blender, and click <span class="italic">File &gt; User Preferences &gt; Addons &gt; Install from File...</span></li>
 	<li>Browse for <span class="bold">ldraw_import.py</span>, and open it.</li>
@@ -142,6 +142,7 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
 <a href="https://github.com/Banbury" target="_blank">Banbury</a></li>
 <li>Converted brick readings to use <code>with</code> statement</li>
 <li>Continue import even if brick is missing</li>
+<li>Fixed minimum Blender version</li>
 <li>Various cleanup</li>
 </ul>
 
@@ -246,6 +247,8 @@ different amounds of RAM</li>
 
 <h2 class="center">Planned Features</h2><br> 
 <ol>
+<li>A complete list of planned features can be found at 
+<a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues" target="_blank">https://github.com/le717/Blender-2.6-LDraw-Importer/issues</a>. 
 <li>Conform to standard Blender script API to be considered for official Blender adoption.
 See this <a href="http://www.blender.org/documentation/blender_python_api_2_68_release/info_best_practice.html" target="_blank">page</a> for more info</li>
 <li>Do not stop entire import process if brick cannot be found, rather skip the brick and continue with import</li>
