Tagging Blender 2.6 LDraw Importer v1.0 - Banbury Edition
Add release date

--- a/Read Me First.html
+++ b/Read Me First.html
@@ -91,10 +91,9 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
 
 <h3>1.0</h3>
 <em>Banbury Edition</em><br>
-(Released ?? ??, 2013)<br>
+(Released October 1, 2013)<br>
 <ul>
-<li>Uploaded source code to <a href="https://github.com/Triangle717/Blender-2.6-LDraw-Importer" title="https://github.com/Triangle717/Blender-2.6-LDraw-Importer" target=
-"_blank">GitHub</a>. -Triangle717</li>
+<li>Uploaded source code to <a href="https://github.com/Triangle717/Blender-2.6-LDraw-Importer" target="_blank">GitHub</a>. -Triangle717</li>
 <li>Switched to plain text version of GPL V2.</li>
 <li>Converted all whitespace to 4 spaces whitespace to conform to Python standards using Blender scripting scene.</li>
 <li>Added most of <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt's</a> Linux patch, with minor changes.</li>
