Remove Bricksmith, as it's models can not be imported properly

--- a/Read Me First.html
+++ b/Read Me First.html
@@ -71,7 +71,7 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
 	<li><span class="bold">ldraw_import.py</span> (included with this download)</li>
 	<li><a href="http://www.ldraw.org/help/getting-started.html" title="LDraw System of Tools" target="_blank">LDraw System of Tools</a></li>
 	<li><a href="http://mlcad.lm-software.com/" title="MLCad" target="_blank">MLCad</a>, <a href="http://www.leocad.org/trac" title="LeoCAD" target="_blank">
-	LeoCAD</a>, or <a href="http://bricksmith.sourceforge.net/" title="Bricksmith" target="_blank">Bricksmith</a> (all optional)</li>
+	LeoCAD</a> (both optional)</li>
 </ul><a name="Install"></a>
 
 <h3 class="center">Installation</h3>
