--- a/Read Me First.html
+++ b/Read Me First.html
@@ -246,7 +246,8 @@ higher color quality, which is better for renders (the swap seems to work correc
 
 <h2 class="center">Known Bugs</h2><br> 
 <ol>
-<li>Bricksmith LDR files do not properly import due to different layout than normal LDR files</li>
+<li>Bricksmith LDR and MPD files do not import properly</li>
+<li>Entire import stops upon reaching an non-existent brick</li>
 <li>Blender crashes if user imports multiple models and available RAM is too low to continue. Can never be fixed, due to various computers with 
 different amounts of RAM</li>
 </ol><a name="ThePlan"></a>
@@ -256,7 +257,7 @@ different amounts of RAM</li>
 <li>A complete list of planned features can be found at 
 <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues" target="_blank">https://github.com/le717/Blender-2.6-LDraw-Importer/issues</a>. 
 <li>Conform to standard Blender script API to be considered for official Blender adoption.
-See this <a href="http://www.blender.org/documentation/blender_python_api_2_68_release/info_best_practice.html" target="_blank">page</a> for more info</li>
+See this <a href="http://www.blender.org/documentation/blender_python_api_2_69_release/info_best_practice.html" target="_blank">page</a> for more info</li>
 <li>Add the ability to properly import Bricksmith LDR models</li>
 <li>Adapt the ability to set metallic colors</li>
 <li>Perhaps create an EXE installer for Windows that would automatically install the script</li>
