--- a/Read Me First.html
+++ b/Read Me First.html
@@ -110,8 +110,7 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
     <li>Fix crash when trying to import a non-existent brick (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/11" target="_blank">Issue #11</a></li>
     <li>Detect render engine and use proper materials for it rather than selecting a checkbox</li>
     <li>Filter out non-LDraw files in file browser</li>
-    <li>Set mesh origin to geometry if CleanUp box if selected</li>
-    <li>
+    <li>Set mesh origin to geometry</li>
 </ul>
 
 <strong>1.0</strong><br>
@@ -273,7 +272,7 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
     <li>A complete list of planned features can be found at
     <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues" target="_blank">https://github.com/le717/Blender-2.6-LDraw-Importer/issues</a>.
     <li>Conform to standard Blender script API to be considered for official Blender adoption.
-    See this <a href="http://www.blender.org/documentation/blender_python_api_2_69_release/info_best_practice.html" target="_blank">page</a> for more info</li>
+    See this <a href="http://www.blender.org/documentation/blender_python_api_2_69_1/info_best_practice.html" target="_blank">page</a> for more info</li>
     <li>Add the ability to properly import Bricksmith LDR models</li>
     <li>Adapt the ability to set metallic colors</li>
     <li>Perhaps create an EXE installer for Windows that would automatically install the script</li>
