--- a/Readme.html
+++ b/Readme.html
@@ -126,11 +126,28 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
     <br>and will tell the user through a popup in Blender's UI" - patch submitted via GitHub by <a href="https://github.com/Tribex" target="_blank">Tribex</a>
     (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/pull/14" target="_blank">Issue #14</a>)</li>
     <li>Conversion of single quotes to double quotes where possible</li>
+    <li>Changed new messages from <code>.mpd</code> to <code>.lcd</code> (script does not support MPD models, see <a target="_blank" href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/7">Issue #7</a>)</li>
     <li>Reworked internal model cleanup process, now cleaner and better supports future improvements</li>
     <li>More conversion of string consentration from <code>+</code> (plus) signs to <code>str.format()</code> method</li>
     <li>New way of presenting import options, more easily understood and looks nicer too</li>
     <li>Split check for subpart into separate function</li>
     <li>Fixed <code>NameError</code> for <code>isPart</code> when importing from relative path (relative to model location)</li>
+    <li>Updated import option messages and button location</li>
+    <li>Added import option icons</li>
+    <li>Finalized actions in <code>GameFix</code> import option, simplified error messages </li>
+    <li>Created script (<code>setup.py</code>) to automatically package release for upload</li>
+    <li>Ensure version number for <code>setup.py</code> is in proper format</li>
+    <li>Detect LDraw installation on Windows in commen locations (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/15" target="_blank">Issue #15</a>,
+    <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/16" target="_blank">#16</a>)</li>
+    <li>Cleaned up <code>GameFix</code> import option code</li>
+    <li>Set <code>.ldr</code> file extension as default (per <a target="_blank" href="http://www.ldraw.org/article/218.html#extension">http://www.ldraw.org/article/218.html#extension</a>)</li>
+    <li>Reversed condition when checking valid file extentions</li>
+    <li>"Fixed loading error for models with invalid colors."</li>
+    <li>"Make object color also be viewport color" (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/21" target="_blank">Issue #21</a>)</li>
+    <li>Display message in console if high-res bricks are being used in the import</li>
+    <li>Filter out <code>.pyc</code> files made by Python 2.x in <code>setup.py</code></li>
+    <li>Display "This software uses the LDraw Parts Library" image in <code>README.md</code></li>
+    <li>Set script encoding to UTF-8</li>
 </ul>
 
 <strong>1.0</strong><br>
@@ -153,7 +170,9 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
     <li>Added ability to disable use of high-res bricks</li>
     <li>Correctly construct quads in bricks - patch submitted via GitHub by <a href="https://github.com/Banbury" target="_blank">Banbury</a></li>
     <li>Correctly apply brick materials - patch submitted via GitHub by <a href="https://github.com/Banbury" target="_blank">Banbury</a></li>
+<!--
     <li>Don't use high-quality bricks by default - patch submitted via GitHub by <a href="https://github.com/Banbury" target="_blank">Banbury</a></li>
+-->
     <li>Improvements to model cleanup  - patch submitted via GitHub by <a href="https://github.com/Banbury" target="_blank">Banbury</a></li>
     <li>Fixed materials for multi-colored bricks  - patch submitted via GitHub by <a href="https://github.com/Banbury" target="_blank">Banbury</a></li>
     <li>Handle color value 16 correctly  - patch submitted via GitHub by <a href="https://github.com/Banbury" target="_blank">Banbury</a></li>
