--- a/Readme.html
+++ b/Readme.html
@@ -8,20 +8,21 @@
     <![endif]-->
 
     <meta charset="UTF-8" />
-    <title>Blender 2.6 LDraw Importer Readme</title>
+    <title>LDR Importer</title>
     <style type="text/css">
-        .subheaders { text-align: left; }
-        .bold { font-weight: bold; }
-        .italic { font-style: italic; }
-        td { text-align: center; }
-        .center { text-align: center; }
-         a { text-decoration: none; }
-        a:hover { text-decoration: underline; }
+        .subheaders { text-align:left; }
+        .bold { font-weight:bold; }
+        .italic { font-style:italic; }
+         p, .center, td { text-align:center; }
+         a { text-decoration:none; color:rgb(000,000,255); }
+         a:hover { text-decoration:underline; }
+         h1, h2, h3, h4, h5, h6 { font-family:sans-serif; }
+         #top { font-size:1.2em; }
     </style>
 </head>
 
 <body>
-<a name="ToC"></a><h2 class="center">Blender 2.6 LDraw Importer Readme</h2>
+<a name="ToC"></a><h1 class="center">LDR Importer</h1>
 <table>
 <thead>
     <th><strong>Table of Contents</strong></th>
@@ -44,14 +45,6 @@
 </td>
 </tr>
 <tr>
-<td><a href="#Bugs">Known Bugs</a>
-</td>
-</tr>
-<tr>
-<td><a href="#ThePlan">Planned Features</a>
-</td>
-</tr>
-<tr>
 <td><a href="#Support">Support</a>
 </td>
 </tr>
@@ -59,44 +52,43 @@
 </table>
 <br>
 
-<p class="center">This is the readme for the <span class="bold">Blender 2.6 LDraw</span> Importer script by <a href="http://wiki.blender.org/index.php/Extensions:2.6/Py/Scripts/Import-Export/LDRAW_Importer" title="Blender Wiki" target="_blank">David Pluntze</a>, maintained
-by <a href="http://jrmastermodelbuilder.netai.net/"  title="JrMasterModelBuilder" target="_blank">JrMasterModelBuilder</a> and <a href="
-http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle717</a>, from October 2012 - January 2013,<br> and released to the public under the
-<a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" title ="GNU General Public License, version 2">GNU General Public License Version 2.</p>
+<p>This is the readme for <span class="bold">LDR Importer</span> script licensed the
+<a href="http://www.gnu.org/licenses/gpl-2.0.html" target="_blank" >General Public License Version 2.</p>
 <a name="WhatsNeeded"></a>
 <br>
 
-<h3 class="center">System Requirements</h3>
+<h3>System Requirements</h3>
 <ul>
-    <li><a href="http://blender.org" title="Blender" target="_blank">Blender 2.63 or higher</a></li>
-    <li><code>ldraw_import.py</code> (included with this download)</li>
-    <li><a href="http://www.ldraw.org/help/getting-started.html" title="LDraw System of Tools" target="_blank">LDraw System of Tools</a></li>
-    <li><a href="http://mlcad.lm-software.com/" title="MLCad" target="_blank">MLCad</a>, <a href="http://www.leocad.org/trac" title="LeoCAD" target="_blank">
+    <li><a href="http://www.blender.org" target="_blank">Blender 2.63 or higher</a></li>
+    <li><code>import_ldraw.py</code> (included with this download)</li>
+    <li><a href="http://www.ldraw.org/help/getting-started.html" target="_blank">LDraw Library of Parts</a></li>
+    <li><a href="http://mlcad.lm-software.com/" target="_blank">MLCad</a>, <a href="http://www.leocad.org/trac" target="_blank">
     LeoCAD</a> (both optional)</li>
 </ul><a name="Install"></a>
 
-<h3 class="center">Installation</h3>
+<h3>Installation</h3>
 
-<h4 class="center">Windows, Mac OS X, Linux</h4>
+<h4>Windows, Mac OS X, Linux</h4>
 <ul>
     <li>Open Blender, and click <span class="italic">File &gt; User Preferences &gt; Addons &gt; Install from File...</span></li>
-    <li>Browse for <span class="bold">ldraw_import.py</span>, and open it.</li>
-    <li>Find the script name in the list of Addons (search for LDraw if needed), and tick the check mark to activate it.</li>
+    <li>Browse for <code>import_ldraw.py</code>, and open it.</li>
+    <li>Find the script name in the list of Addons (search for "LDR" if needed), and tick the check mark to activate it.</li>
     <li>If you want to load the script at all times, click the <span class="italic">Save as Default</span> button.</li><a name="LDrawPath"></a>
 </ul>
 
-<h3 class="center">Setting the LDraw Folder Path</h3>
+<h3>Setting the LDraw Folder Path</h3>
 <ul>
-    <li>Open Blender, and click <span class="italic">File &gt; Import &gt; LDraw Model (.dat/.ldr)</span></li>
+    <li>Open Blender, and click <span class="italic">File &gt; Import &gt; LDraw Model (.ldr/.dat)</span></li>
     <li>In the bottom left corner of your screen, under the <span class="bold">Import LDraw Model</span> header, there is a small field with the title <span
-    class="bold">LDraw Path</span>. Modify the field with the proper folder path to your <span class="italic">LDraw System of Tools</span> installation path.
+    class="bold">LDraw Path</span>. Modify the field with the proper folder path to your <span class="italic">LDraw Library of Parts</span> installation path.
     </li>
     <li>Click the <code>+</code> about the path and name the preset to save your installation path. You will select the present each time you open Blender to set your installation path to the LDraw System of Tools.</li>
 </ul>
-<p class="center">That's it! You have successfully installed the <span class="bold">Blender 2.6 LDraw Importer</span> script.</p>
+<br>
+<p>That's it! You have successfully installed the <span class="bold">LDR Importer</span> script.</p>
 <a name="Changes"></a>
 
-<h2 class="center">Change Log</h2>
+<h2>Change Log</h2>
 
 <strong>1.1</strong><br>
 <em>The Working Quartet</em><br>
@@ -108,7 +100,7 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
     <li>Fix string concentration errors</li>
     <li>Fix LEGO brick plastic IOR value</li>
     <li>Fix many PEP 8 line length issues</li>
-    <li>Fix crash when trying to import a non-existent brick (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/11" target="_blank">Issue #11</a>)</li>
+    <li>Fix crash when trying to import a non-existent brick (see <a href="https://github.com/le717/LDR-Importer/issues/11" target="_blank">Issue #11</a>)</li>
     <li>Detect render engine and use proper materials for it rather than selecting a checkbox</li>
     <li>Allow import on allow import on both case-sensitive and case-insensitive file systems - initial patch submitted via GitHub by <a href="https://github.com/Tribex" target="_blank">Tribex</a></li>
     <li>Set mesh origin to geometry - patch submitted via GitHub by <a href="https://github.com/rioforce" target="_blank">rioforce</a></li>
@@ -117,17 +109,17 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
     <li>Majorly updated Markdown documentation files</li>
     <li>Fix possible bug with LDraw installation directory</li>
     <li>New <code>debugPrint()</code> function for easier understanding of message origin ans exactly when it was displayed - patch submitted via GitHub by <a href="https://github.com/Tribex" target="_blank">Tribex</a>
-    (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/pull/14" target="_blank">Issue #14</a>)</li>
+    (see <a href="https://github.com/le717/LDR-Importer/pull/14" target="_blank">Issue #14</a>)</li>
     <li>"Major error messages now display a small popup when called, notifying the user in Blender's UI,
     <br>instead of silently closing the file select screen and only outputting to the console" - patch submitted via GitHub by <a href="https://github.com/Tribex" target="_blank">Tribex</a>
-    (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/pull/14" target="_blank">Issue #14</a>)</li>
+    (see <a href="https://github.com/le717/LDR-Importer/pull/14" target="_blank">Issue #14</a>)</li>
     <li>"Major error messages now identify what type of error they were, and print the stack trace where necessary" - patch submitted via GitHub by <a href="https://github.com/Tribex" target="_blank">Tribex</a>
-    (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/pull/14" target="_blank">Issue #14</a>)</li>
+    (see <a href="https://github.com/le717/LDR-Importer/pull/14" target="_blank">Issue #14</a>)</li>
     <li>"Importing files which do not have a .ldr, .dat, or .mpd extension is no longer allowed and will not be attempted,
     <br>and will tell the user through a popup in Blender's UI" - patch submitted via GitHub by <a href="https://github.com/Tribex" target="_blank">Tribex</a>
-    (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/pull/14" target="_blank">Issue #14</a>)</li>
+    (see <a href="https://github.com/le717/LDR-Importer/pull/14" target="_blank">Issue #14</a>)</li>
     <li>Conversion of single quotes to double quotes where possible</li>
-    <li>Changed new messages from <code>.mpd</code> to <code>.lcd</code> (script does not support MPD models, see <a target="_blank" href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/7">Issue #7</a>)</li>
+    <li>Changed new messages from <code>.mpd</code> to <code>.lcd</code> (script does not support MPD models, see <a target="_blank" href="https://github.com/le717/LDR-Importer/issues/7">Issue #7</a>)</li>
     <li>Reworked internal model cleanup process, now cleaner and better supports future improvements</li>
     <li>More conversion of string concentration from <code>+</code> (plus) signs to <code>str.format()</code> method</li>
     <li>New way of presenting import options, more easily understood and looks nicer too</li>
@@ -138,13 +130,13 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
     <li>Finalized actions in <code>GameFix</code> import option, simplified error messages </li>
     <li>Created script (<code>setup.py</code>) to automatically package release for upload</li>
     <li>Ensure version number for <code>setup.py</code> is in proper format</li>
-    <li>Detect LDraw Library of Parts installation on Windows in common locations (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/15" target="_blank">Issue #15</a>,
-    <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/16" target="_blank">#16</a>)</li>
+    <li>Detect LDraw Library of Parts installation on Windows in common locations (see <a href="https://github.com/le717/LDR-Importer/issues/15" target="_blank">Issue #15</a>,
+    <a href="https://github.com/le717/LDR-Importer/issues/16" target="_blank">#16</a>)</li>
     <li>Cleaned up <code>GameFix</code> import option code</li>
     <li>Set <code>.ldr</code> file extension as default (per <a target="_blank" href="http://www.ldraw.org/article/218.html#extension">http://www.ldraw.org/article/218.html#extension</a>)</li>
     <li>Reversed condition when checking valid file extensions</li>
     <li>"Fixed loading error for models with invalid colors."</li>
-    <li>"Make object color also be viewport color" (see <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues/21" target="_blank">Issue #21</a>)</li>
+    <li>"Make object color also be viewport color" (see <a href="https://github.com/le717/LDR-Importer/issues/21" target="_blank">Issue #21</a>)</li>
     <li>Display message in console if high-res bricks are being used in the import</li>
     <li>Filter out <code>.pyc</code> files made by Python 2.x in <code>setup.py</code></li>
     <li>Display "This software uses the LDraw Parts Library" image in <code>README.md</code></li>
@@ -163,13 +155,13 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
 <em>Banbury Edition</em><br>
 (Released October 1, 2013)
 <ul>
-    <li>Uploaded source code to <a href="https://github.com/Triangle717/Blender-2.6-LDraw-Importer" target="_blank">GitHub</a>. -Triangle717</li>
+    <li>Uploaded source code to <a href="https://github.com/Triangle717/LDR-Importer" target="_blank">GitHub</a>. -Triangle717</li>
     <li>Switched to plain text version of GPL V2</li>
     <li>Converted all whitespace to 4 spaces whitespace to conform to Python standards using Blender scripting scene</li>
     <li>Added most of <a href="http://sourceforge.net/u/mss02/profile/" target="_blank">Marc Schmitt's</a> Linux patch, with minor changes</li>
     <li>Made LDraw folder paths case-insensitive</li>
     <li>Added ability to set LDraw System of Tools folder path from within Blender using code from <a href="https://github.com/impiaaa/blender-ldraw" target=
-    "_blank">Spencer Alves's Blender 2.6 LDraw Importer</a></li>
+    "_blank">Spencer Alves's LDraw Importer</a></li>
     <li>Added ability to disable automatic model cleanup (remove doubles and recalculate normals). Doing so is <strong>not advised</strong></li>
     <li>Changed <code>dict()</code> to the proper <code>{}</code> syntax</li>
     <li>Script cleanup</li>
@@ -303,38 +295,17 @@ http://Triangle717.wordpress.com" title="Triangle717" target="_blank">Triangle71
 (Released February 23, 2012)<br>
 <ul>
     <li>Original version by David Pluntze</li>
-</ul><a name="Bugs"></a>
+</ul><a name="Support"></a>
 
-<h2 class="center">Known Bugs</h2><br>
-<ol>
-    <li>Bricksmith LDR and MPD files do not import properly</li>
-    <li>Entire import stops upon reaching an non-existent brick</li>
-    <li>Blender crashes if user imports multiple models and available RAM is too low to continue.
-    Can never be fixed, due to various computers with different amounts of RAM</li>
-</ol><a name="ThePlan"></a>
-
-<h2 class="center">Planned Features</h2><br>
-<ol>
-    <li>A complete list of planned features can be found at
-    <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/issues" target="_blank">https://github.com/le717/Blender-2.6-LDraw-Importer/issues</a>.
-    <li>Conform to standard Blender script API to be considered for official Blender adoption.
-    See this <a href="http://www.blender.org/documentation/blender_python_api_2_69_1/info_best_practice.html" target="_blank">page</a> for more info</li>
-    <li>Add the ability to properly import Bricksmith LDR models</li>
-    <li>Adapt the ability to set metallic colors</li>
-    <li>Perhaps create an EXE installer for Windows that would automatically install the script</li>
-</ol>
-<a name="Support"></a>
-
-<h2 class="center">Support</h2>
-<br>
+<h2>Support</h2>
 <p>To submit bug reports or get the newest, bleeding-edge script, please go to
-<a href="https://github.com/le717/Blender-2.6-LDraw-Importer" target="_blank">https://github.com/le717/Blender-2.6-LDraw-Importer</a>.
+<a href="https://github.com/le717/LDR-Importer" target="_blank">https://github.com/le717/LDR-Importer</a>.
 <br>
-To download the newest release, please visit <a href="https://github.com/le717/Blender-2.6-LDraw-Importer/releases" target="_blank">
-https://github.com/le717/Blender-2.6-LDraw-Importer/releases</a></p>
+To download the newest release, please visit <a href="https://github.com/le717/LDR-Importer/releases" target="_blank">
+https://github.com/le717/LDR-Importer/releases</a></p>
 <br>
 <br>
 
-<a class="ToC" href="#ToC">Back to the top</a>
+<a id="top" class="ToC" href="#ToC">Back to the top</a>
 </body>
 </html>
